--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 
      <a name="homepage"> <section  class="homepage">
         <!-- <img class="homebg" src="/images/charles-deloye-2RouMSg9Rnw-unsplash.jpg" alt=""> -->
-        <h1>DAM Technical College</h1>
-        <p>
+        <h1 class="welcomeH1">DAM Technical College</h1>
+        <p class="welcomep">
           The college was establishe in 1998 with a <br />
           commitment to provide quality education and to <br />
           contribute positively towards econimic solution <br />
@@ -40,13 +40,13 @@
 
      <!-- ========================================CAMPUS LIFE SECTION================================================= -->
      <a name="campusLife"><section class="campusLife">
-        <h1>Campus Life</h1>
-        <p>
+        <h1 class="campusLH1">Campus Life</h1>
+        <p class="campusLP">
           The college was establishe in 1998 with a <br />
           commitment to provide quality education and to <br />
           contribute positively towards econimic solution <br />
         </p>
-        <div > 
+        <div class="multiMedia"> 
             <video width="320" height="240" controls>
                 <source src="/images/videoplayback.mp4" type="video/mp4"> 
               </video>
@@ -65,9 +65,9 @@
       <!-- ========================================ADMISSIONS & AID SECTION================================================= -->
 
      <a name="admissions&Aid"> <section class="admissionsAid">
-        <h1>Admissons & Aid</h1>
-        <h3>  HOW TO APPLY DAM TRAINING COLLEGE ONLINE APPLICATION 2024 </h3>
-        <p>
+        <h1 class="admissionH1">Admissons & Aid</h1>
+        <h3 class="admissionH3">  HOW TO APPLY DAM TRAINING COLLEGE ONLINE APPLICATION 2024 </h3>
+        <p class="admissionP">
          
           Go to – https://www.damtraining.co.za/ <br />
           Proof of payment of your registration fee(compulsory for SA and International applicants)<br />
@@ -86,6 +86,7 @@
 
       <!-- ========================================PROGRAMMS SECTION================================================= -->
       <a name="programs"> <section class="programs">
+        <h1 class="programmsH1">Programms </h1>
         <card>
           <cardHead>
             <h3>IT</h3>
