done with cards

--- a/index.html
+++ b/index.html
@@ -87,12 +87,13 @@
       <!-- ========================================PROGRAMMS SECTION================================================= -->
       <a name="programs"> <section class="programs">
         <h1 class="programmsH1">Programms </h1>
-        <card>
-          <cardHead>
+        <div class="program"> 
+        <div class="card">
+          <div class="cardHead">
             <h3>IT</h3>
-          </cardHead>
-          <cardBody>
-            <img alt="img" src="" />
+          </div>
+          <div class="cardBody">
+            <img alt="img" src="/images/2a3b6c2a-f1ba-48e1-b5be-cfd0e878340a.jpg" />
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. <br />
               Enim dolores, deleniti exercitationem molestias aut accusantium!
@@ -100,15 +101,15 @@
               Atque officia minima molestiae eos aliquid nobis quasi ipsam
               assumenda temporibus qui.
             </p>
-          </cardBody>
-        </card>
+          </div>
+        </div>
 
-        <card>
-          <cardHead>
+        <div class="card">
+          <div class="cardHead">
             <h3>Marketing</h3>
-          </cardHead>
-          <cardBody>
-            <img alt="img" src="" />
+          </div>
+          <div class="cardBody">
+            <img alt="img" src="/images//220623153043-college-students-life-skills-stock-super-tease.jpg" />
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. <br />
               Enim dolores, deleniti exercitationem molestias aut accusantium!
@@ -116,15 +117,15 @@
               Atque officia minima molestiae eos aliquid nobis quasi ipsam
               assumenda temporibus qui.
             </p>
-          </cardBody>
-        </card>
+          </div>
+        </div>
 
-        <card>
-          <cardHead>
+        <div class="card">
+          <div class="cardHead">
             <h3>Economics</h3>
-          </cardHead>
-          <cardBody>
-            <img alt="img" src="" />
+          </div>
+          <div class="cardBody">
+            <img alt="img" src="/images/join-the-community.jpg" />
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. <br />
               Enim dolores, deleniti exercitationem molestias aut accusantium!
@@ -132,8 +133,9 @@
               Atque officia minima molestiae eos aliquid nobis quasi ipsam
               assumenda temporibus qui.
             </p>
-          </cardBody>
-        </card>
+          </div>
+        </div>
+      </div>
       </section> </a>
 
       <!-- ========================================ABOUT SECTION================================================= -->
@@ -176,28 +178,32 @@
 
       <!-- ========================================Contacts SECTION================================================= -->
       <a name="contacts"> <section class="contacts">
-        <h2>Contacts</h2>
-        <card>
-          <cardHead>
+        <h3>Contacts</h3>
+        <div class="contact">
+        <div class="card">
+          <div class="cardHead"> 
             <h3>PRETORIA CAMPUS</h3>
-          </cardHead>
-          <cardBody>
+          </div>
+          <div class="cardBody">
             <p>
               219 Du Toit Street<br /><br />
 
               Tel No : 011 446 2851<br />
               Contact person: Secretary<br />
+              WhatsApp No.: 063 111 8402<br />
               Tel No : 012 4425100 / 011 446 2851<br />
+              WhatsApp No.: 063 111 8402<br />
+              WhatsApp No.: 063 111 8402<br />
               Email : pta@damtraining.com<br />
             </p>
-          </cardBody>
-        </card>
+          </div>
+        </div>
 
-        <card>
-          <cardHead>
+        <div class="card">
+          <div class="cardHead">
             <h3>BRAAMFONTEIN CAMPUS (HEAD OFFICE)</h3>
-          </cardHead>
-          <cardBody>
+          </div>
+          <div class="cardBody">
             <p>
               77 De-Korte Street Braamfontein<br /><br />
 
@@ -207,8 +213,9 @@
               WhatsApp No.: 063 111 8402<br />
               Email : braam@damtraining.com<br />
             </p>
-          </cardBody>
-        </card>
+          </div>
+        </div>
+      </div>
       </section></a>
     </main>
   </body>
