change the loriem to normal text

--- a/index.html
+++ b/index.html
@@ -95,11 +95,11 @@
           <div class="cardBody">
             <img alt="img" src="/images/2a3b6c2a-f1ba-48e1-b5be-cfd0e878340a.jpg" />
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. <br />
-              Enim dolores, deleniti exercitationem molestias aut accusantium!
-              Molestias, est maiores? <br />
-              Atque officia minima molestiae eos aliquid nobis quasi ipsam
-              assumenda temporibus qui.
+              With the level of technological integration into nearly every facet of life and business,  <br />
+              it’s practically essential for companies, large or small, have an Information Technology (IT) <br />
+              department to handle all the technological issues that arise.
+
+             
             </p>
           </div>
         </div>
@@ -111,11 +111,9 @@
           <div class="cardBody">
             <img alt="img" src="/images//220623153043-college-students-life-skills-stock-super-tease.jpg" />
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. <br />
-              Enim dolores, deleniti exercitationem molestias aut accusantium!
-              Molestias, est maiores? <br />
-              Atque officia minima molestiae eos aliquid nobis quasi ipsam
-              assumenda temporibus qui.
+              The marketing department is responsible for identifying, anticipating, and satisfying customer <br />
+              needs and wants profitably. The end goal is to make more profit. Fostering long-term relationships <br />
+              is also another task; thus, money keeps flowing into the company.
             </p>
           </div>
         </div>
@@ -127,12 +125,9 @@
           <div class="cardBody">
             <img alt="img" src="/images/join-the-community.jpg" />
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. <br />
-              Enim dolores, deleniti exercitationem molestias aut accusantium!
-              Molestias, est maiores? <br />
-              Atque officia minima molestiae eos aliquid nobis quasi ipsam
-              assumenda temporibus qui.
-            </p>
+              Welcome to the Department of Economics at the University of the Western Cape. <br /> 
+              Our professional degree programmes are carefully designed and focused on developing <br />
+              your skills as an economist that can be applied to a range of real world issues.
           </div>
         </div>
       </div>
